[feature] add spotless